listar e exibir livro

--- a/projeto/backend/Bibilioteca/web/WEB-INF/web.xml
+++ b/projeto/backend/Bibilioteca/web/WEB-INF/web.xml
@@ -27,6 +27,10 @@
         <servlet-name>GerenciarCliente</servlet-name>
         <servlet-class>controller.GerenciarCliente</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>GerenciarLivro</servlet-name>
+        <servlet-class>controller.GerenciarLivro</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>GerenciarLogin</servlet-name>
         <url-pattern>/gerenciar_login.do</url-pattern>
@@ -50,6 +54,10 @@
     <servlet-mapping>
         <servlet-name>GerenciarCliente</servlet-name>
         <url-pattern>/gerenciar_cliente.do</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>GerenciarLivro</servlet-name>
+        <url-pattern>/gerenciar_livro.do</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
