--- a/projeto/backend/Bibilioteca/nbproject/project.properties
+++ b/projeto/backend/Bibilioteca/nbproject/project.properties
@@ -28,6 +28,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.jbcrypt-0.4.jar=web/WEB-INF/lib/jbcrypt-0.4.jar
 file.reference.mysql-connector-java-8.0.23.jar=web/WEB-INF/lib/mysql-connector-java-8.0.23.jar
 includes=**
 j2ee.compile.on.save=true
@@ -39,7 +40,8 @@ j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
     ${libs.jstl.classpath}:\
-    ${file.reference.mysql-connector-java-8.0.23.jar}
+    ${file.reference.mysql-connector-java-8.0.23.jar}:\
+    ${file.reference.jbcrypt-0.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
