--- a/projeto/backend/Bibilioteca/web/WEB-INF/web.xml
+++ b/projeto/backend/Bibilioteca/web/WEB-INF/web.xml
@@ -3,7 +3,11 @@
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
-    <servlet>
+    <error-page>
+        <error-code>404</error-code>
+        <location>/templates/pagina404.jsp</location>
+    </error-page>
+    <servlet>index
         <servlet-name>GerenciarLogin</servlet-name>
         <servlet-class>controller.GerenciarLogin</servlet-class>
     </servlet>
